@@ -1,4 +1,7 @@
 0.5.2 (UNRELEASED)
+	- Added table prefix and suffix options (by Wayne Wight)
+	  [spamsch]
+
 	- Fixed assignment error in __init__.py (Issue 10)
 	  [spamsch]
 
